/interest/contact fixed.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://turancdl:87UlwI5Zr8zTrgbUK66RUE5DVgcl97Xt@dpg-d0o8trgdl3ps73ac0ksg-a/turancdl
+BOT_TOKEN=7173239563:AAHx4fWZBBeEFJcxQCyKnAX1zprWRjIefN0
+LOGIN_SECRET=/login Xp2s5v8y/B?E(H+KbPeShVmYq3t6w9z$C&F)J@NcQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4u7x!A%D*G-Ka
